# throttle_machines

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .rubocop.yml  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  clippy.toml  release-please-config.json  throttle_machines.gemspec
.github/workflows/: ci.yml  engines.yml  manual-native-build.yml  publish-gem.yml  release-please.yml  test-multiarch-publish.yml
config/: routes.rb
docs/: ADVANCED_FEATURES.md  COMMAND_EXAMPLES.md  INSTRUMENTATION.md  MISSION_CONTROL.md  MISSION_LOGS.md  PLANETARY_INTEGRATION.md  README.md  SHIELD_PROTOCOLS.md  SPACECRAFT_MANUAL.md  SPACE_LAB.md  TELEMETRY.md  THE_AMAZONIAN_PROTOCOLS.md  WARP_DRIVE.md
ext/throttle_machines_native/: Cargo.toml  extconf.rb
ext/throttle_machines_native/core/: CHANGELOG.md  Cargo.toml  README.md
ext/throttle_machines_native/core/src/: circuit_breaker.rs  fixed_window.rs  gate.rs  gcra.rs  lib.rs  token_bucket.rs
ext/throttle_machines_native/ffi/: CHANGELOG.md  Cargo.toml  extconf.rb
ext/throttle_machines_native/ffi/src/: lib.rs
lib/: throttle_machines.rb
lib/throttle_machines/: async_breaker.rb  async_limiter.rb  async_support.rb  clock.rb  control.rb  controller_helpers.rb  dependency_error.rb  engine.rb  hedged_breaker.rb  hedged_request.rb  instrumentation.rb  limiter.rb  middleware.rb  native_speedup.rb  rack_middleware.rb  throttled_error.rb  version.rb
lib/throttle_machines/rack_middleware/: allow2_ban.rb  ban_filter.rb  blocklist.rb  configuration.rb  fail2_ban.rb  list_filter.rb  request.rb  safelist.rb  throttle.rb  track.rb
lib/throttle_machines/storage/: base.rb  memory.rb  null.rb  redis.rb
lib/throttle_machines/storage/redis/: gcra.lua  get_breaker_state.lua  increment_counter.lua  peek_gcra.lua  peek_token_bucket.lua  record_breaker_failure.lua  record_breaker_success.lua  token_bucket.lua
test/: benchmark.rb  test_helper.rb
test/dummy/: Gemfile  RATE_LIMITING_TEST_SETUP.md  README.md  analyze_instrumentation_log.rb  analyze_throttle_events.rb  demo.rb  monitor_logs.sh  start_server.sh  test_rate_limiting.sh  test_rate_limiting_ab.sh
test/dummy/app/controllers/: circuits_controller.rb  health_controller.rb  rate_limit_test_controller.rb  test_controller.rb  weather_controller.rb
test/dummy/app/services/: external_api_service.rb
test/dummy/config/: application.rb  puma.rb  routes.rb
test/dummy/config/environments/: development.rb  test.rb
test/dummy/config/initializers/: instrumentation.rb  middleware.rb  throttle_machines.rb
test/dummy/test/controllers/: rate_limit_test_controller_test.rb
test/dummy/test/integration/: middleware_debug_test.rb  middleware_test.rb  simple_middleware_test.rb  simple_rate_limit_test.rb
test/dummy/tmp/: local_secret.txt
test/support/: test_clock.rb
test/throttle_machines/: async_limiter_test.rb  control_test.rb  instrumentation_test.rb  limiter_test.rb  rack_middleware_test.rb  version_test.rb
