[package]
name = "throttle_machines_native"
version = "0.2.0"
edition = "2024"
authors = ["Abdelkader Boudih <terminale@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
throttle-machines = { workspace = true, features = ["std"] }
magnus = { version = "0.8.2", features = ["rb-sys"] }
